--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-hola loco
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>BRICK BREAKER</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Titillium+Web&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>BRICK BREAKER</h1>
+  <canvas id="canvas-test" width="800" height="950"></canvas>
+  <div>
+    <button class="start-btn">Start Game</button>
+  </div>
+  <script src="js/bricks.js"></script>
+  <script src="js/player.js"></script>
+  <script src="js/ball.js"></script>
+  <script src="js/background.js"></script>
+  <script src="js/game.js"></script>
+  <script src="js/script.js"></script>
+</body>
+
+</html>
